--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@
 
 /*** Hero Header ***/
 .hero-header {
-    background: linear-gradient(rgba(15, 23, 43, .9), rgba(15, 23, 43, .9)), url(../img/hero-image.jpg);
+    background: linear-gradient(rgba(15, 23, 43, .9), rgba(15, 23, 43, .9)), url(../img/backgroundimg.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -242,7 +242,7 @@
     position: relative;
     height: 100%;
     min-height: 500px;
-    background: linear-gradient(rgba(15, 23, 43, .1), rgba(15, 23, 43, .1)), url(../img/video.jpg);
+    background: linear-gradient(rgba(15, 23, 43, .1), rgba(15, 23, 43, .1)), url(../img/contact-from.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
